# Heroes__

./: CMakeLists.txt  Game.h  diagram_class.puml  main.cpp
Factories/: AbstractFactory.h  MagicianFactory.h  WarriorFactory.h
Heroes/: Hero.h  HeroTypes.h  IMagician.h  IWarrior.h
Heroes/Dwarf/: Dwarf.h  DwarfMagician.h  DwarfWarrior.h
Heroes/Elf/: Elf.h  ElfMagician.h  ElfWarrior.h
Items/: AbstractItem.h  Bag.h
